--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
             </section>
         </section>
         <aside>
-            <h1>hola</h1>
+            <h1>Este es un blog informativo que se esta desarrollando en html y css... espere a que se termine de desarrollar
+            </h1>
 
         </aside>
     </section>
