--- a/index.html
+++ b/index.html
@@ -3,29 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="PIniciativaImg/Fut7.png" />
+    <link rel="shortcut icon" href="TecJobApp/logotipoORG.png" />
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="CSS/StileIndex.css">
-    <title>Pequeños con iniciativa</title>
+    <title>Trabajos y aplicaciones tecnólogicas</title>
 </head>
 <body>
     
     <header id="navegador" class="colorFondo">
         <nav class="navbar navbar-expand-lg navbar-light ">
-            <img id="tamIcon" src="PIniciativaImg/Fut7.png" alt="LogoPCI.png">
-            <img id="tamNom" src="PIniciativaImg/Nombre.png" alt="Pequeños con iniciativa">
+            <img id="tamIcon" src="TecJobApp/logotipoORG.png" alt="LogoPCI.png">
+            <h4>Trabajos y aplicaciones tecnologicas</h4>
             <div class="enviar-derecha collapse navbar-collapse">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="enMarg" href="#">Cat. Infantil</a>
+                  <a class="enMarg" href="#">Marketing</a>
                 </li>
                 <li class="nav-item">
-                  <a class="enMarg" href="#">Cat. juvenil</a>
+                  <a class="enMarg" href="#">Contabilidad</a>
                 </li>
                 <li class="nav-item">
-                  <a class="enMarg" href="#">Cat. femenil</a>
+                  <a class="enMarg" href="#">Tecnología</a>
                 </li>
               </ul>
             </div>
@@ -35,8 +35,8 @@
     <section id="contenedor">
         <section id="contenedorInterno">
             <section class="categoria">
-                <p id="tamLet">Deporte / Fundacion de "Pequeños con iniciativa"</p>
-                <p id="tamLet" class="acomodar-derecha">19/08/2013</p>
+                <p id="tamLet">Tecnologia / Contabilidad y finanzas</p>
+                <p id="tamLet" class="acomodar-derecha">24/02/2021</p>
             </section>
             <section>
                 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -45,29 +45,20 @@
                         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                         <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img id="TSlide" src="PIniciativaImg/Cam/Fund1.jpg" class="d-block w-100" alt="...">
+                            <img id="TSlide" src="TecJobApp/Cam/Fund1.jpg" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img id="TSlide" src="PIniciativaImg/Cam/Fund2.jpg" class="d-block w-100" alt="...">
+                            <img id="TSlide" src="TecJobApp/Cam/Fund2.jpg" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img id="TSlide" src="PIniciativaImg/Cam/Fund3.jpg" class="d-block w-100" alt="...">
+                            <img id="TSlide" src="TecJobApp/Cam/Fund3.jpg" class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img id="TSlide" src="PIniciativaImg/Cam/Fund4.jpg" class="d-block w-100" alt="...">
+                            <img id="TSlide" src="TecJobApp/Cam/Fund4.jpg" class="d-block w-100" alt="...">
                         </div>
-                        <div class="carousel-item">
-                            <img id="TSlide" src="PIniciativaImg/Cam/Fund5.jpg" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img id="TSlide" src="PIniciativaImg/Cam/Camp.jpg" class="d-block w-100" alt="...">
-                        </div>                       
-                        
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -87,6 +78,51 @@
         </aside>
     </section>
     <section></section>
-    <footer></footer>
+    <footer id="piePagina">
+        <nav>
+            <div class="row">
+                <div id="divFooter" class="col-3"></div>
+                <div id="divFooter" class="col-3">
+                    <p style="text-align: center;">Contácto:</p>
+                    <div class="row">
+                        <div id="icono" class="col-3">
+                            <img style="margin-bottom: 8px;" src="TecJobApp/RedesSociales/facebook.png" alt="facebook" heigth="30px" width="30px"><br>
+                            <img style="margin-bottom: 8px;" src="TecJobApp/RedesSociales/gmail.png" alt="facebook" heigth="30px" width="30px">
+                        </div>
+                        <div class="col-9">
+                            <a href="https://www.facebook.com/Trabajos-y-aplicaciones-tecnol%C3%B3gicas-104623768344087" >
+                                <p>Trabajos y aplicaciones tecnólogicas</p>
+                            </a>
+                            <p>workandapp.tec@gmail.com</p>
+                        </div>
+                    </div>
+                </div>
+                <div id="divFooter" class="col-3">
+                    <p style="text-align: center;">Teléfonos</p>
+                    <div id="footerTel" class="row">
+                        <div id="icono" class="col-5">
+                            <a href="https://wa.link/4swwux"><img style="margin-bottom: 8px;" src="TecJobApp/RedesSociales/whatsapp.png" heigth="30px" width="30px"></a><br>
+                            <a href="https://wa.link/xoprhz"><img src="TecJobApp/RedesSociales/telegrama.png" alt="facebook" heigth="30px" width="30px"></a>
+                        </div>
+                        <div class="col-7">
+                                <p>551-566-04-28</p>
+                                <p>551-695-02-91</p>
+                        </div>
+                    </div>
+                </div>
+                <div id="divFooter" class="col-3"></div>
+            </div>
+            <div style="text-align: center; padding: 10px;">
+                <script type="text/javascript">
+                    var meses = new Array ("Enero","Febrero","Marzo","Abril","Mayo","Junio","Julio","Agosto","Septiembre","Octubre","Noviembre","Diciembre");
+                    copyright=new Date();
+                    año=copyright.getFullYear();
+                    mes=meses[copyright.getMonth()];
+
+                    document.write("© Febrero 2021 - "+mes+" "+año + " / Tec-JobApp");
+                </script>
+            </div>
+        </nav>
+    </footer>
 </body>
 </html>
